--- a/examples/food.html
+++ b/examples/food.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link href="http://cdn.jsdelivr.net/picnicss/4.1.1/plugins.min.css" rel="stylesheet">
-    <link href="../style.css" rel="stylesheet" type="text/css"></link>
+    <link href="style.css" rel="stylesheet" type="text/css"></link>
   </head>
   <body>
     <a class="home" href="index.html">All examples</a>
