Updated readme examples

--- a/examples/index.html
+++ b/examples/index.html
@@ -19,7 +19,7 @@
       <a class="button" href=""></a>
     </template>
 
-    <p>PS, this example list was made with htemplate.js</p>
+    <p>PS, this example list was made with htemplate</p>
 
     <script src="../template.js"></script>
     <script>
